first two tutorials

--- a/tutorials/text-models.mdx
+++ b/tutorials/text-models.mdx
@@ -1,65 +1,106 @@
 ---
-title: 'Building Text Models'
-description: 'Complete tutorial for training text and code models'
+title: 'Text Generation Models'
+description: 'Complete tutorial for training large language models for text generation'
 ---
 
-# Building Text and Code Models
+# Training Large Language Models for Text Generation
 
-This tutorial walks you through training a text model from start to finish using Nolano.AI.
+This comprehensive tutorial demonstrates the platform's capabilities for training text generation models from scratch. We'll walk through building a large language model with advanced features including ternary precision, Mixture of Experts (MoE) architecture, and multi-task training across different data sources.
+
+## What You'll Learn
+
+In this tutorial, we'll cover:
+- **Multi-source data preparation** with weighted sampling
+- **Large-scale model training** using the Qwen3-30B-A3B architecture
+- **Advanced optimization techniques** including ternary precision and MoE load balancing
+- **Custom regularization** with z-loss and additional loss functions
+- **Platform automation features** like GPU scaling and checkpointing
+
+<Note>
+  This tutorial showcases advanced features. If you're new to the platform, consider starting with our [quickstart guide](/quickstart) first.
+</Note>
 
 ## Prerequisites
 
 <Steps>
-  <Step title="Install Nolano.AI">
-    Contact the Nolano team to receive the installation package and setup instructions:
-
-    <Card title="Request Self-Hosted Access" icon="envelope" color="#935095">
-      Email [hello@nolano.ai](mailto:hello@nolano.ai) with:
-      - Your research institution/organization
-      - Intended use case and research goals
-      - Hardware specifications and cluster details
-      - Timeline for your project
-    </Card>
+  <Step title="Access to Nolano.AI">
+    Ensure you have access to the Nolano.AI platform. Contact [hello@nolano.ai](mailto:hello@nolano.ai) if you need access.
   </Step>
   
   <Step title="Prepare Your Data">
     Your text data should be in JSONL format with each line containing a dictionary with a `text` key:
     
     ```json
-    {"text": "This is the first document."}
-    {"text": "This is another document for training."}
-    {"text": "More training data here."}
+    {"text": "Natural language text for general training."}
+    {"text": "Domain-specific content for specialized training."}
+    {"text": "Various text sources to demonstrate multi-task learning."}
     ```
+    
+    For this tutorial, we'll use two separate data sources to demonstrate multi-task training.
   </Step>
 </Steps>
 
 ## Step 1: Data Preparation
 
-Create a data preparation configuration:
+We'll prepare two separate datasets that will be combined during training with different sampling weights. This demonstrates the platform's multi-task learning capabilities.
 
-```python data_config.py
+### Prepare General Text Data
+
+First, let's prepare our general text dataset (70% of training data):
+
+```python general_data_config.py
 from pynolano import DataPreparationConfig
 
 def build() -> DataPreparationConfig:
     return DataPreparationConfig(
-        input_path="./raw_text_data.jsonl",
-        output_path="./prepared_text_data",
-        tokenization="microsoft/DialoGPT-medium",  # Or any HF tokenizer
-        max_sequence_length=2048
+        input_path="./general_text_data.jsonl",
+        output_path="./prepared_general_text",
+        tokenization="Qwen/Qwen2.5-32B-Instruct",  # Using Qwen tokenizer to match our model
+        max_sequence_length=4096
     )
 ```
 
-Run the data preparation:
+### Prepare Domain-Specific Data
+
+Next, prepare the domain-specific dataset (30% of training data):
+
+```python domain_data_config.py
+from pynolano import DataPreparationConfig
+
+def build() -> DataPreparationConfig:
+    return DataPreparationConfig(
+        input_path="./domain_specific_data.jsonl",
+        output_path="./prepared_domain_data",
+        tokenization="Qwen/Qwen2.5-32B-Instruct",  # Same tokenizer for consistency
+        max_sequence_length=4096
+    )
+```
+
+### Run Data Preparation
+
+Prepare both datasets:
 
 ```bash
-nolano prepare_data data_config.py
+# Prepare general text data
+nolano prepare_data general_data_config.py
+
+# Prepare domain-specific data  
+nolano prepare_data domain_data_config.py
 ```
+
+<Note>
+  The platform automatically handles data validation, tokenization, and optimization for efficient training. Each prepared dataset will include metadata about sequence lengths, token distributions, and validation splits.
+</Note>
 
 ## Step 2: Training Configuration
 
-Create your training configuration:
+We'll create two training configurations to demonstrate the platform's flexibility. We'll start with the simplest possible setup to help you understand the fundamentals, then progress to an advanced configuration that showcases enterprise-grade features.
 
-```python train_config.py
+### Simple Training Configuration
+
+Let's start with the most basic configuration possible to understand the fundamentals. This uses a single data source and minimal configuration:
+
+```python simple_train_config.py
 from pynolano import (
     ExperimentConfig, 
     DataConfig, 
@@ -70,141 +111,198 @@ from pynolano import (
 
 def build() -> ExperimentConfig:
     return ExperimentConfig(
-        data_configs=DataConfig(
-            data_paths="./prepared_text_data",
-            validation_split=0.1
-        ),
+        # Single data source - the simplest setup
+        data_configs=[
+            DataConfig(
+                data_paths="./prepared_general_text",
+                training_objective="cross_entropy",
+                validation_split=0.1
+            )
+        ],
         model_config=ModelConfig(
-            architecture="microsoft/DialoGPT-medium",
-            init_method="none"  # Start from pretrained
+            architecture="Qwen/Qwen2.5-1.5B",  # Very small model for quick training
+            init_method="normal"  # Train from scratch
         ),
         optimization_config=OptimizationConfig(
-            total_training_steps=5000,
-            max_learning_rate=2e-5,
-            global_batch_size=16,
+            total_training_steps=5000,  # Shorter training for quick results
+            max_learning_rate=3e-4,
+            global_batch_size=16,  # Smaller batch size
             learning_rate_schedule="cosine",
-            warmup_steps=500,
-            weight_decay=0.01
+            warmup_steps=500
         ),
         meta_config=MetaConfig(
-            name="text-model-experiment",
+            name="simple-text-generation",
             model_save_frequency=1000,
-            max_checkpoints=3
+            max_checkpoints=2
         )
     )
 ```
+
+### Transitioning to Advanced Features
+
+Now that you understand the basics, let's explore what makes our platform truly powerful. The advanced configuration below demonstrates enterprise-grade features that enable training state-of-the-art models:
+
+- **Multi-task learning** with weighted data sampling (70%/30% split)
+- **Large-scale architectures** (30B parameters with Mixture of Experts)
+- **Cutting-edge precision** (ternary/1.58-bit training)
+- **Advanced regularization** (z-loss and load balancing)
+- **Production optimizations** (distributed training, checkpointing)
+
+### Advanced Training Configuration
+
+Here's the full configuration showcasing the platform's advanced capabilities:
+
+```python advanced_train_config.py
+from pynolano import (
+    ExperimentConfig, 
+    DataConfig, 
+    ModelConfig, 
+    OptimizationConfig,
+    MetaConfig
+)
+
+def build() -> ExperimentConfig:
+    return ExperimentConfig(
+        # Multi-task data configuration with precise sampling weights
+        data_configs=[
+            DataConfig(
+                data_paths="./prepared_general_text",
+                training_objective="cross_entropy",
+                sampling_weight=0.7,  # Exactly 70% as specified
+                validation_split=0.1
+            ),
+            DataConfig(
+                data_paths="./prepared_domain_data",
+                training_objective="cross_entropy", 
+                sampling_weight=0.3,  # Exactly 30% as specified
+                validation_split=0.1
+            )
+        ],
+        model_config=ModelConfig(
+            architecture="Qwen/Qwen3-30B-A3B",  # Large MoE architecture as specified
+            init_method="normal",  # Training from scratch as specified
+            precision="ternary"  # Ternary precision (1.58-bit) as specified
+        ),
+        optimization_config=OptimizationConfig(
+            total_training_steps=50000,
+            max_learning_rate=1e-4,
+            global_batch_size=128,
+            learning_rate_schedule="cosine",
+            warmup_steps=5000,
+            weight_decay=0.01,
+            z_loss=0.1,  # Z-loss regularization as specified
+            load_balancing=0.1  # MoE load balancing coefficient as specified
+        ),
+        meta_config=MetaConfig(
+            name="advanced-text-generation-qwen3-30b",
+            model_save_frequency=5000,
+            max_checkpoints=5,
+            seed=42
+        )
+    )
+```
+
+<Tip>
+  **Large Model Training**: The Qwen3-30B-A3B model requires significant computational resources. The platform will automatically scale GPU resources and manage efficeint distributed training across multiple nodes.
+</Tip>
 
 ## Step 3: Start Training
 
+### Simple Model Training
+
+Start with the simple configuration to get familiar with the platform:
+
 ```bash
-nolano train train_config.py
+nolano train simple_train_config.py
 ```
+
+This will train a small 1.5B parameter model for 5,000 steps using a single data source. Perfect for learning the basics and seeing quick results!
+
+### Advanced Model Training
+
+Once you're comfortable with the simple setup, try the advanced configuration with all enterprise features:
+
+```bash
+nolano train advanced_train_config.py
+```
+
+This trains a production-scale 30B parameter model with multi-task learning, ternary precision, and MoE architecture - showcasing the platform's full capabilities.
 
 <Note>
-  Training will automatically use all available GPUs with data parallelism.
+  **Auto-scaling**: The platform automatically detects your model size and handling scaling techniques across GPU resources accordingly. For the 30B parameter model, we recommend using atleast 8x H100 GPUs.
 </Note>
 
-## Step 4: Monitor Training
 
-Watch the training progress with real-time logging:
+## Step 4: Batch Inference for Production
 
-- **Loss curves**: Monitor training and validation loss
-- **Learning rate**: Track learning rate schedule
-- **GPU utilization**: Ensure efficient resource usage
-- **Throughput**: Tokens per second metrics
+For large-scale text generation:
 
-## Step 5: Evaluation
+```python batch_inference.py
+from pynolano import BatchInference
 
-Create an evaluation configuration:
-
-```python eval_config.py
-from pynolano import EvaluationConfig, DataConfig
-
-def build() -> EvaluationConfig:
-    return EvaluationConfig(
-        model_path="./text-model-experiment/global_step_5000",
-        data_config=DataConfig(
-            data_paths="./test_data.jsonl",
-            validation_split=1.0
-        ),
-        eval_metrics=["perplexity", "accuracy"],
-        output_predictions=True
-    )
-```
-
-Run evaluation:
-
-```bash
-nolano evaluate eval_config.py
-```
-
-## Step 6: Inference
-
-Test your trained model:
-
-```python
-from pynolano import load_model, InferenceConfig
-
-# Load the model
-model = load_model("./text-model-experiment/global_step_5000")
-
-# Configure inference
-config = InferenceConfig(
-    max_new_tokens=100,
-    temperature=0.7,
-    top_p=0.9
+# Set up batch inference
+batch_generator = BatchInference(
+    model_path="./advanced-text-generation-qwen3-30b/global_step_50000",
+    input_path="./inference_prompts.jsonl",  # JSONL with {"prompt": "..."} format
+    output_path="./generated_outputs",
+    batch_size=32,
+    device="cuda"
 )
 
-# Generate text
-results = model.generate(
-    inputs=["Once upon a time"],
-    config=config
-)
+# Configure generation parameters
+generation_config = {
+    "max_new_tokens": 256,
+    "temperature": 0.7,
+    "top_p": 0.9,
+    "do_sample": True
+}
 
-print(results[0])
+# Process all prompts
+batch_generator.run(config=generation_config)
 ```
 
-## Advanced Topics
+### Advanced Training Capabilities
+
+The tutorial you just completed showcases several cutting-edge features:
 
 <AccordionGroup>
-  <Accordion title="Multi-Task Learning">
-    Train on multiple datasets simultaneously:
+  <Accordion title="Ternary Precision Training">
+    **1.58-bit Precision for Efficient Large Models**
     
-    ```python
-    data_configs=[
-        DataConfig(
-            data_paths="./general_text",
-            sampling_weight=0.7
-        ),
-        DataConfig(
-            data_paths="./domain_specific",
-            sampling_weight=0.3
-        )
-    ]
-    ```
+    Our ternary precision training reduces memory usage by ~10x while maintaining performance:
+    - Automatic gradient scaling and stability
+    - Mixed-precision optimizations
+    - Hardware-accelerated ternary operations
+    - Seamless integration with any model architecture
   </Accordion>
 
-  <Accordion title="Custom Loss Functions">
-    Implement custom training objectives:
+  <Accordion title="Mixture of Experts (MoE) Optimization">
+    **Intelligent Expert Load Balancing**
     
-    ```python
-    def custom_loss(predictions, targets):
-        # Your custom loss implementation
-        return loss_value
+    The platform automatically optimizes MoE training:
+    - Load balancing coefficient tuning (we used 0.1)
+    - Expert utilization monitoring
+    - Routing efficiency optimization
+    - Scalable expert parallelism
+  </Accordion>
+  
+  <Accordion title="Multi-Task Data Management">
+    **Sophisticated Data Pipeline Orchestration**
     
-    DataConfig(
-        data_paths="./data",
-        training_objective=custom_loss
-    )
-    ```
+    Your 70%/30% data split demonstrates:
+    - Precise sampling weight control
+    - Cross-entropy loss optimization per data source
+    - Automatic data validation and consistency checks
+    - Dynamic batch composition for optimal learning
   </Accordion>
 
-  <Accordion title="Export to Hugging Face">
-    Share your model on Hugging Face Hub:
+  <Accordion title="Advanced Regularization">
+    **Z-loss and Custom Regularization**
     
-    ```bash
-    nolano convert_to_hf ./checkpoints/global_step_5000 train_config.py ./hf_model --upload
-    ```
+    The z-loss=0.1 configuration provides:
+    - Improved training stability for large models
+    - Better gradient flow in deep architectures  
+    - Reduced activation magnitude variance
+    - Enhanced convergence properties
   </Accordion>
 </AccordionGroup>
-
