--- a/finetuning.mdx
+++ b/finetuning.mdx
@@ -31,6 +31,30 @@ The main configuration class for finetuning experiments, building on the Experim
   Metadata and run-specific parameters for the finetuning experiment
 </ParamField>
 
+### MetaConfig
+
+Configuration for experiment metadata and checkpointing behavior.
+
+<ParamField path="name" type="str" default="trial-run">
+  Name identifier for this finetuning experimental run.
+</ParamField>
+
+<ParamField path="seed" type="int" default="42">
+  Random seed for reproducible finetuning.
+</ParamField>
+
+<ParamField path="save_path" type="str" default="current working directory / run_name">
+  Directory path for saving finetuned model checkpoints.
+</ParamField>
+
+<ParamField path="model_save_frequency" type="int" default="-1">
+  Frequency (in steps) for saving model checkpoints. Set to -1 to save only at the end of finetuning.
+</ParamField>
+
+<ParamField path="max_checkpoints" type="int" default="-1">
+  Maximum number of model checkpoints to retain. Set to -1 for no limit.
+</ParamField>
+
 ### FinetuningOptimizationConfig
 
 Specialized optimization configuration for finetuning with recommended parameter ranges.
